fix #3085 - fix iframe that generated white space at the bottom in checkout_confirmation when used paypalacdc
git-svn-id: https://svn.modified-shop.org/svn/modified-shop/trunk@16677 79ac0487-9261-4f26-a34d-858dee0dcce0

--- a/templates/tpl_modified/stylesheet.css
+++ b/templates/tpl_modified/stylesheet.css
@@ -258,6 +258,9 @@ table td {
 .td_full {
   width:100%;
 }
+iframe {
+  display:block;
+}
 /* END globals */
 
 
